embedding and chatModel working changes